<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="top"
    android:padding="@dimen/padding_small">

    <com.google.android.exoplayer2.ui.PlayerView
        android:id="@+id/video_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />


    <LinearLayout
        android:id="@+id/recipe_desc_text_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/video_player"
        android:layout_margin="@dimen/margin_small"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/recipe_step_detail_image"
            android:layout_width="@dimen/recipe_step_image_width"
            android:layout_height="@dimen/recipe_step_image_height"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_small"
            android:contentDescription="@string/recipe_step_image_text"
            tools:src="@drawable/ic_no_image" />

        <TextView
            android:id="@+id/recipe_step_detail_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black"
            tools:text="@string/dummy_recipe_step_detail_text" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/recipe_desc_btn_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/recipe_desc_text_wrapper"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/margin_small"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/previous_step_btn"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_previous_white"
            android:text="@string/previous_step_btn_text" />

        <Button
            android:id="@+id/next_step_btn"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_weight="1"
            android:drawableRight="@drawable/ic_next_white"
            android:text="@string/next_step_btn_text" />

    </LinearLayout>

</RelativeLayout>