<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.supjain.bakingapp.RecipeViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:padding="@dimen/margin_small">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recipe_names_recycle_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{(viewModel.recipeList != null || !viewModel.recipeList.isEmpty()) ? View.VISIBLE : View.GONE}"
            app:data="@{viewModel.recipeList}" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@{viewModel.errorMsg}"
            android:textColor="@android:color/white"
            android:visibility="@{viewModel.errorMsg != null ? View.VISIBLE : View.GONE}"
            tools:text="@string/no_data_err_msg" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="@{(viewModel.recipeList == null || viewModel.recipeList.isEmpty() &amp;&amp; viewModel.errorMsg == null) ? View.VISIBLE : View.GONE}" />

    </RelativeLayout>

</layout>